Putting it All Together & Troubleshooting Layout Issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,11 +25,15 @@ html {
   font-size: 62.5%;
 }
 
+img {
+  width: 100%;
+}
+
 body {
-  font-family: Inter, Arial, Helvetica, sans-serif;
-  font-size: 2.4rem;
-  line-height: 1.5;
   color: var(--color-body);
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  font-size: 2rem;
+  line-height: 1.5;
 }
 
 h1,
@@ -41,7 +45,7 @@ h3 {
 }
 
 h1 {
-  font-size: 7rem;
+  font-size: 6rem;
 }
 
 h2 {
@@ -49,8 +53,9 @@ h2 {
 }
 
 h3 {
-  font-size: 3rem;
-  font-weight: 500;
+  font-size: 2.8rem;
+  font-weight: 600;
+  line-height: 1.3;
 }
 
 p {
@@ -113,12 +118,12 @@ a {
 }
 
 .badge--primary {
-  background-color: var(--color-primary);
+  background: var(--color-primary);
   color: #fff;
 }
 
 .badge--secondary {
-  background-color: var(--color-secondary);
+  background: var(--color-secondary);
   color: #fff;
 }
 
@@ -207,7 +212,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -215,9 +220,9 @@ a {
 
 .btn .icon {
   height: 2rem;
-  width: 2rem;
   margin-right: 1rem;
   vertical-align: middle;
+  width: 2rem;
 }
 
 .btn--primary {
@@ -235,7 +240,7 @@ a {
 }
 
 .btn--secondary:hover {
-  background: #00c8eb;
+  background: #05cdf0;
 }
 
 .btn--accent {
@@ -247,16 +252,6 @@ a {
   background: #ec3000;
 }
 
-.btn--stretched {
-  padding-left: 6rem;
-  padding-right: 6rem;
-}
-
-.btn--block {
-  width: 100%;
-  display: inline-block;
-}
-
 .btn--outline {
   background: #fff;
   border: 2px solid var(--color-headings);
@@ -266,6 +261,16 @@ a {
 .btn--outline:hover {
   background: var(--color-headings);
   color: #fff;
+}
+
+.btn--stretched {
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
+.btn--block {
+  width: 100%;
+  display: inline-block;
 }
 
 @media screen and (min-width: 1024px) {
@@ -298,6 +303,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -319,7 +325,7 @@ a {
 
 .card__header,
 .card__body {
-  padding: 2rem 3rem;
+  padding: 2rem 7%;
 }
 
 .card--primary .card__header {
@@ -353,11 +359,11 @@ a {
 }
 
 .plan__price {
-  font-size: 6rem;
+  font-size: 5rem;
 }
 
 .plan__billing-cycle {
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: 300;
   margin-right: 1rem;
   opacity: 0.8;
@@ -372,10 +378,6 @@ a {
 
 .plan .list__item {
   margin-bottom: 2rem;
-}
-
-.plan--popular {
-  transform: scale(1.1);
 }
 
 .plan--popular .card__header {
@@ -400,6 +402,10 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+  .plan--popular {
+    transform: scale(1.1);
+  }
+
   .plan__name {
     font-size: 1.4rem;
   }
@@ -452,15 +458,15 @@ a {
 }
 
 .quote__author {
-  font-size: 3rem;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 500;
   margin-bottom: 0;
 }
 
 .quote__organization {
-  counter-reset: var(--color-headings);
-  font-size: 2rem;
+  color: var(--color-headings);
+  font-size: 1.5rem;
   font-style: normal;
   opacity: 0.4;
 }
@@ -501,23 +507,25 @@ a {
   }
 }
 
-/* Testimonial */
+/* Testimonials */
 .testimonial {
   padding: 3rem;
 }
 
-.testimonial__image {
-  position: relative;
+.testimonial .quote {
+  font-size: 110%;
+  margin: 2rem 0;
 }
 
-.testimonial__image > img {
-  width: 100%;
+.testimonial__image {
+  margin: 0 3rem;
+  position: relative;
 }
 
 .testimonial__image > .icon-container {
   position: absolute;
-  top: 3rem;
   right: -32px;
+  top: 3rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -525,52 +533,49 @@ a {
     margin: 0;
   }
 
-  .testimonial .quote,
-  .testimonial .quote__author {
-    font-size: 2.4rem;
-  }
-
   .testimonial .quote {
-    margin-left: 6rem;
-    margin-right: 0;
+    font-size: 120%;
+    line-height: 1.5;
+    margin: 5rem 0 0 6rem;
   }
 }
 
-/* Collouts */
-.collout {
+/* Callouts */
+.callout {
   border-radius: 5px;
   padding: 4rem;
 }
 
-.collout--primary {
+.callout--primary {
   background: var(--color-primary);
   color: #fff;
 }
 
-.collout__heading {
+.callout__heading {
   color: #fff;
   font-size: 3rem;
   margin-top: 0;
 }
 
-.collout .btn {
+.callout .btn {
   align-self: center;
   justify-self: center;
 }
 
-.collout__content {
+.callout__content {
   text-align: center;
 }
 
 @media screen and (min-width: 768px) {
-  .collout .grid--cols-2 {
+  .callout .grid--cols-2 {
     grid-template-columns: 1fr auto;
   }
-  degdeg .collout__content {
+
+  .callout__content {
     text-align: left;
   }
 
-  .collout .btn {
+  .callout .btn {
     justify-self: start;
     margin: 0 2rem;
   }
@@ -610,7 +615,7 @@ a {
 
 /* Blocks */
 .block {
-  --padding-vertical: 6rem;
+  --padding-vertical: 5rem;
   padding: var(--padding-vertical) 2rem;
 }
 
@@ -636,12 +641,12 @@ a {
 
 .block--skewed-right {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);
 }
 
 .block--skewed-left {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
 }
 
 .container {
@@ -656,7 +661,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 0 1rem;
+  padding: 1rem;
 }
 
 .nav__list {
@@ -667,6 +672,10 @@ a {
 .nav__item {
   border-bottom: 1px solid #222;
   padding: 0.5rem 2rem;
+}
+
+.nav__item:last-of-type {
+  border-bottom: none;
 }
 
 .nav__item > a {
@@ -692,6 +701,7 @@ a {
 
 .nav__brand {
   transform: translateY(5px);
+  width: 150px;
 }
 
 @media screen and (min-width: 768px) {
@@ -720,18 +730,16 @@ a {
   margin: 2rem 0 5rem;
 }
 
-.hero__image {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
-  .hero {
-    padding-top: 0;
-  }
-
   .hero__content {
     text-align: left;
     align-self: center;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero {
+    padding-top: 0;
   }
 }
 
@@ -744,10 +752,11 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
   font-size: 2rem;
   font-weight: 600;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   justify-items: center;
   margin: 0 auto;
@@ -781,11 +790,7 @@ a {
 }
 
 .feature__heading {
-  margin-top: 1rem 0;
-}
-
-.feature__image {
-  width: 100%;
+  margin: 1rem 0;
 }
 
 @media screen and (min-width: 768px) {
@@ -795,13 +800,9 @@ a {
 }
 
 /* Showcase Block */
-.block-showcase__image > img {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
   .block-showcase .grid {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% 50%;
   }
 
   .block-showcase__image {
@@ -817,6 +818,7 @@ a {
 /* Footer */
 .footer {
   background: #232323;
+  padding-top: 10rem;
 }
 
 .footer a {
@@ -828,18 +830,20 @@ a {
   color: #fff;
 }
 
-.footer .list {
-  margin: 0;
-}
-
 .footer__section {
   padding: 2rem;
   border-bottom: 1px solid #393939;
 }
 
+.footer__section .list {
+  margin: 0;
+}
+
 .footer__heading {
-  text-transform: uppercase;
+  font-size: 2.5rem;
   font-weight: 600;
+  line-height: 1.5;
+  text-transform: uppercase;
 }
 
 .footer__brand {
@@ -848,9 +852,6 @@ a {
 }
 
 .footer__brand img {
-  /* TODO: Consider refactoring this and 
-  applying it to all images. */
-  width: 100%;
   max-width: 230px;
 }
 
@@ -861,6 +862,9 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+  .footer {
+    font-size: 1.5rem;
+  }
   .footer__sections {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
@@ -890,4 +894,9 @@ a {
   .footer__heading {
     font-size: 1.6rem;
   }
+}
+
+/* Sign-up Callout */
+.callout-signup {
+  transform: translateY(5rem);
 }
